--- a/contrib/gitian-descriptors/gitian-win32.yml
+++ b/contrib/gitian-descriptors/gitian-win32.yml
@@ -13,7 +13,7 @@ packages:
 - "faketime"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/apcks3/gcoin.git"
+- "url": "https://github.com/apcksfugh/gcoin.git"
   "dir": "funcoin"
 files:
 - "qt-win32-4.8.5-gitian-r8.zip"
