--- a/contrib/gitian-descriptors/gitian.yml
+++ b/contrib/gitian-descriptors/gitian.yml
@@ -20,7 +20,7 @@ packages:
 - "libpng12-dev"
 reference_datetime: "2011-01-30 00:00:00"
 remotes:
-- "url": "https://github.com/apcks3/gcoin.git"
+- "url": "https://github.com/apcksfugh/gcoin.git"
   "dir": "funcoin"
 files:
 - "miniupnpc-1.9.20140401.tar.gz"
